Further adaptions towards Ubuntu 14.04 LTS: Switched to cron.d; depend on "networking" instead of "network" upstart service

--- a/files/default/nat.conf
+++ b/files/default/nat.conf
@@ -1,7 +1,7 @@
 description "Configure iptables rules for NAT"
 author "Amazon Linux AMI <amazon-linux-ami@amazon.com>"
 
-start on started network
+start on started networking
 task
 chdir /tmp
 exec /usr/sbin/configure-pat.sh
